--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <div class="logo">
+                <img src="./images/logo/Booki.png" alt="Logo de Booki">
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
