--- a/index.html
+++ b/index.html
@@ -27,24 +27,147 @@
                 </ul>
             </nav>
         </header>
-        <main>
+
+        <div class="search-section">
+        </br></br>
+        <h1 class="search-heading">Trouver votre hébergement de vacances de rêves</h1>
+        <h2 class="search-subheading">En plein centre ville et en nature</h2>
+        <div class="search-section">
+            <form class="search-form" action="#" method="GET">
+                <div class="search-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <input type="text" id="search-input" name="search" placeholder="Marseille, France">
+                <button type="submit" class="search-button">
+                    <i class="fas fa-search search-icon-only"></i>
+                    <span class="search-text">Rechercher</span>
+                </button>
+            </form>
+        </div>        
+    </div>
+    
+
+            <!-- Filters Section -->
+            <div class="filters-container">
+                <span class="filters-label">Filtres</span>
+                <div class="filters">
+                    <button class="filter-button"><i class="fa-solid fa-money-bill-alt"></i> Économique</button>
+                    <button class="filter-button"><i class="fa-solid fa-male"></i> Familial</button>
+                    <button class="filter-button"><i class="fa-solid fa-heart"></i> Romantique</button>
+                    <button class="filter-button selected"><i class="fa-solid fa-fire"></i> Nos pépites</button>
+                </div>
+            </div>
+
+            <!-- New Info Bar Section -->
+            <div class="info-bar">
+                <i class="fas fa-info-circle"></i>
+                <span>Plus de 500 logements sont disponibles dans cette ville</span>
+            </div>
+                
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                  <h2 class="section-title">Hébergements à Marseille</h2></br>
+                    <div class="hebergement-cards">
+                        <!-- Hébergements cards -->
+                        <article class="card">
+                            <img src="./images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
+                            <div class="card-content">
+                                <h3 class="card-title">Hôtel du port</h3>
+                                <p class="card-subtitle">Nuit à partir de 45€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="./images/hebergements/febrian-zakaria.jpg" alt="Hôtel Chez Amina">
+                            <div class="card-content">
+                                <h3 class="card-title">Hôtel Chez Amina</h3>
+                                <p class="card-subtitle">Nuit à partir de 90€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star neutral-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="./images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
+                            <div class="card-content">
+                                <h3 class="card-title">Hôtel Les mouettes</h3>
+                                <p class="card-subtitle">Nuit à partir de 75€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="./images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
+                            <div class="card-content">
+                                <h3 class="card-title">Hôtel de la mer</h3>
+                                <p class="card-subtitle">Nuit à partir de 40€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star neutral-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="./images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
+                            <div class="card-content">
+                                <h3 class="card-title">Auberge La Canebière</h3>
+                                <p class="card-subtitle">Nuit à partir de 25€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star neutral-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="./images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
+                            <div class="card-content">
+                                <h3 class="card-title">Auberge Le Panier</h3>
+                                <p class="card-subtitle">Nuit à partir de 32€</p>
+                                <div class="card-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star neutral-star"></i>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <a href="#" class="more-link">Afficher plus</a>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
-                        <h2 class="section-title">Les plus populaires</h2>
+                      <h2 class="section-title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
-                        <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/emile-guillemot.jpg" alt="Hôtel Le soleil du matin">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                        <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 25€</p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -56,14 +179,12 @@
                                     </div>
                                 </div>
                             </article>
-                        </a>
-                        <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/aw-creative.jpg" alt="Chambres d’hôtes Au cœur de l’eau">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
-                                        <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 71€</p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -75,14 +196,12 @@
                                     </div>
                                 </div>
                             </article>
-                        </a>
-                        <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Hôtel Bleu et Blanc">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                                        <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 68€</p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -94,12 +213,64 @@
                                     </div>
                                 </div>
                             </article>
-                        </a>
                     </div>
                 </section>
             </div>
-        </main>
-        <footer></footer>
+        <section class="activities">
+            <h2 class="section-title">Activités à Marseille</h2></section><br>
+            <div class="activities-cards">
+                <article class="card">
+                    <img src="./images/activites/reno-laithienne.jpg" alt="Vieux-Port">
+                    <div class="card-content">
+                        <h3 class="card-title">Vieux-Port</h3>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="./images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
+                    <div class="card-content">
+                        <h3 class="card-title">Fort de Pomègues</h3>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="./images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                    <div class="card-content">
+                        <h3 class="card-title">Parc national des Calanques</h3>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                    <div class="card-content">
+                        <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-links">
+                <div>
+                    <h4>À propos</h4>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Nos hébergements</h4>
+                    <ul>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Assistance</h4>
+                    <ul>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
