Corriger les erreurs W3C HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </header>
 
         <div class="search-section">
-        </br></br>
         <h1 class="search-heading">Trouver votre hébergement de vacances de rêves</h1>
         <h2 class="search-subheading">En plein centre ville et en nature</h2>
         <div class="search-section">
@@ -66,7 +65,7 @@
                 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                  <h2 class="section-title">Hébergements à Marseille</h2></br>
+                  <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergement-cards">
                         <!-- Hébergements cards -->
                         <article class="card">
@@ -217,7 +216,7 @@
                 </section>
             </div>
         <section class="activities">
-            <h2 class="section-title">Activités à Marseille</h2></section><br>
+            <h2 class="section-title">Activités à Marseille</h2>
             <div class="activities-cards">
                 <article class="card">
                     <img src="./images/activites/reno-laithienne.jpg" alt="Vieux-Port">
