Fix : -Le format desktop n'est pas cohérent avec la maquette, rajout d'une bordure gauche et droite avec une couleur de fond autre -Desktop: la disposition des éléments de la partie filtre n'est pas la même que celle sur la maquette - L'icone "repère" est mal intégré dans la barre de recherche et un fond blanc est présent - L'animation hover sur les éléments de navigation du header doivent-être collé au bord supérieur du navigateur - Les éléments "card" ne sont pas cohérent avec la maquette, la bordure blanche n'est pas présente

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
 
             <!-- Filters Section -->
-            <div class="filters-container">
+            <div class="filters">
                 <span class="filters-label">Filtres</span>
                 <div class="filters">
                     <button class="filter-button"><i class="fa-solid fa-money-bill-alt"></i> Économique</button>
