fix : correction pour conformité avec la maquette

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     
 
             <!-- Filters Section -->
-            <div class="filters">
+            <div class="filters filters-container">
                 <span class="filters-label">Filtres</span>
                 <div class="filters">
                     <button class="filter-button"><i class="fa-solid fa-money-bill-alt"></i> Économique</button>
                     <button class="filter-button"><i class="fa-solid fa-male"></i> Familial</button>
                     <button class="filter-button"><i class="fa-solid fa-heart"></i> Romantique</button>
-                    <button class="filter-button selected"><i class="fa-solid fa-fire"></i> Nos pépites</button>
+                    <button class="filter-button "><i class="fa-solid fa-fire"></i> Nos pépites</button>
                 </div>
             </div>
 
