--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
                 
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section class="hebergements" id="hebergements">
                   <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergement-cards">
                         <!-- Hébergements cards -->
@@ -215,7 +215,7 @@
                     </div>
                 </section>
             </div>
-        <section class="activities">
+        <section class="activities" id="activites">
             <h2 class="section-title">Activités à Marseille</h2>
             <div class="activities-cards">
                 <article class="card">
